added led blinking pattern to the project

--- a/project/Makefile
+++ b/project/Makefile
@@ -1,25 +1,26 @@
-#makefile configuration
-COMMON_OBJECTS = main.o
-CPU = msp430g2553
-CFLAGS = -mmcu=${CPU}-I../h
-LDFLAGS = -L/opt/ti/msp430_gcc/include
+# makfile configuration
+COMMON_OBJECTS  = main.o  # Wdinterrupthandler.o 
+CPU             = msp430g2553
+CFLAGS          = -mmcu=${CPU} -I../h
+LDFLAGS		= -L/opt/ti/msp430_gcc/include 
 
 #switch the compiler (for the internal make rules)
-CC = msp430-elf-gcc
-AS = msp430-elf-as
+CC              = msp430-elf-gcc
+AS              = msp430-elf-as
 
 all: toy.elf
 
 #additional rules for files
-toy.elf: ${COMMON_OBJECTS}
-	${CC}${CFLAGS}${LDFLAGS} -o$@%^../lib/libtimer.a
+toy.elf: ${COMMON_OBJECTS} 
+	${CC} ${CFLAGS} ${LDFLAGS} -o $@ $^ library/libTimer.a
 
 load: toy.elf
 	msp430loader.sh toy.elf
 
 clean:
-	rm -f*.o*.elf
+	rm -f *.o *.elf
 
 main.o: led.h
 
-wdInterruptHandler.o: led.h
+wdInterruptHandler.o:  led.h
+
